kubernetes/pihole/pihole-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: pihole
  namespace: pihole
spec:
  type: ClusterIP
  selector:
     app: pihole
  ports:
    - name: http
      protocol: TCP
      port: 80
      # targetPort: 80
      # nodePort: 80
    - name: dns
      protocol: TCP
      port: 53
      # targetPort: 53
      # nodePort: 53
    - name: dnsudp
      protocol: UDP
      port: 53
      # targetPort: 53
      # nodePort: 53
---
kind: Service
apiVersion: v1
metadata:
  name: pihole-public
  namespace: pihole
spec:
  type: NodePort
  externalIPs:
    - "192.168.1.202"
  selector:
     app: pihole
  ports:
    - name: http
      protocol: TCP
      port: 80
    - name: dns
      protocol: TCP
      port: 53
    - name: dnsudp
      protocol: UDP
      port: 53
